# flopyarcade

./: .dockerignore  .gitignore  .travis.yml  Dockerfile  FloPyArcade.py  FloPyArcadeDQN.py  FloPyArcadeGeneticNetwork.py  FloPyArcadePlay.py  FloPyArcadePlay_BACKUP_28072.py  FloPyArcadePlay_REMOTE_28072.py  FloPyArcadeSurrogateTrainInitialFullField.py  MANIFEST.in  README.md  build.py  build_FloPyArcadePlay.py  build_cxfreeze.py  build_pyinstaller.py  ideas.dev  install_mpi.dev  pyproject.toml  requirements.txt  setup.py  test_FloPyArcade.py
archive/: ideas.dev
examples/.ipynb_checkpoints/: 1-runRandomAgent-checkpoint.ipynb
flopyarcade/: __init__.py  flopyarcade.py  play.py  play_againstai.py  requirements.txt  train_dqn.py  train_neuroevolution.py  train_rllib2_apexdqn.py  train_rllib_apexdqn.py  train_rllib_appo.py  train_rllib_impala.py  train_rllib_ppo.py  unittest_complete.py
flopyarcade/examples/images/: action.xcf
flopyarcade/examples/policymodels/: model_1s-d.p  model_2s-d.p  model_3s-d.p
flopyarcade/examples/policymodels/1s-d/: 1s-d.tune_metadata
flopyarcade/examples/policymodels/2s-d/: 2s-d.tune_metadata
flopyarcade/examples/policymodels/3s-d/: 3s-d.tune_metadata
flopyarcade/simulators/linux/: mf2005  mp6
flopyarcade/simulators/mac/: mp6
flopyarcade/tests/: test_agent_dqn.py  test_agent_neuroevolution.py  test_all.py  test_play.py
